--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>2.0.SP1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
 
     </dependencies>
 </project>
