--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,7 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!--Порядок важен!!!-->
     <error-page>
+        <error-code>404</error-code>
         <location>/404</location>
+    </error-page>
+    <error-page>
+        <location>/default-error-handler</location>
     </error-page>
 </web-app>
